@@ -28,6 +28,7 @@ import java.awt.Point;
 
 import javax.ws.rs.Consumes;
 import javax.ws.rs.CookieParam;
+import javax.ws.rs.FormParam;
 import javax.ws.rs.GET;
 import javax.ws.rs.HeaderParam;
 import javax.ws.rs.POST;
@@ -77,4 +78,10 @@ public interface EchoResource {
     @Consumes(MediaType.APPLICATION_JSON)
     Point echoPointCookieParam(@CookieParam("point")
     Point point);
+
+    @POST
+    @Path("point-form")
+    String echoStringFormParam(@FormParam("point")
+    String value);
+
 }
