@@ -152,11 +152,10 @@ public class ClientInvocationHandler<T> implements InvocationHandler {
             result = clientResource;
         } else {
             MethodAnnotationInfo annotationInfo = getAnnotationUtils()
-                    .getMethodAnnotation(annotations, javaMethod);
+                    .getMethodAnnotation(getAnnotations(), javaMethod);
 
             if (annotationInfo != null) {
                 Representation requestEntity = null;
-                boolean isSynchronous = true;
 
                 if ((args != null) && args.length > 0) {
                     // Checks if the user has defined its own callback.
@@ -168,7 +167,6 @@ public class ClientInvocationHandler<T> implements InvocationHandler {
                         } else if (Result.class.isAssignableFrom(o.getClass())) {
                             // Asynchronous mode where a callback object is to
                             // be called.
-                            isSynchronous = false;
 
                             // Get the kind of result expected.
                             final Result rCallback = (Result) o;
@@ -220,7 +218,7 @@ public class ClientInvocationHandler<T> implements InvocationHandler {
                             getClientResource().setOnResponse(callback);
                         } else {
                             requestEntity = getClientResource()
-                                    .toRepresentation(args[i]);
+                                    .toRepresentation(o);
                         }
                     }
                 }
@@ -264,8 +262,8 @@ public class ClientInvocationHandler<T> implements InvocationHandler {
                 // Effectively handle the call
                 Response response = getClientResource().handleOutbound(request);
 
-                // Handle the response
-                if (isSynchronous) {
+                // Handle the response, synchronous call
+                if (getClientResource().getOnResponse() == null) {
                     if ((response != null) && response.getStatus().isError()) {
                         ThrowableAnnotationInfo tai = getAnnotationUtils()
                                 .getThrowableAnnotationInfo(javaMethod,
